--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-logging.level.web=DEBUG
-
+logging.level.web=INFO
+org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 spring.datasource.url=jdbc:postgresql://localhost:5432/cloudgrid_boinc_service
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=boinc_service
 spring.datasource.password=cloudgrid
 
 
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 
 spring.jpa.hibernate.ddl-auto = update
 
