Added additional tests, bug fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.web=INFO
+logging.level.web=DEBUG
 org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 spring.datasource.url=jdbc:postgresql://localhost:5432/cloudgrid_boinc_service
 spring.datasource.driverClassName=org.postgresql.Driver
